--- a/NuLL.cbp
+++ b/NuLL.cbp
@@ -6,6 +6,7 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
+			<Script file="lib_finder.script" />
 			<Target title="Debug">
 				<Option output="bin\Debug\NuLL" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Debug\" />
@@ -56,6 +57,8 @@
 		<Unit filename="NuLLSolve.inl" />
 		<Unit filename="NuLLTools.h" />
 		<Unit filename="NuLLTools.inl" />
+		<Unit filename="NuLLTransform.h" />
+		<Unit filename="NuLLTransform.inl" />
 		<Unit filename="TestCases.h" />
 		<Unit filename="Utils.h" />
 		<Unit filename="Vector.h" />
